# ProjetLLM

./: .gitignore  PromptLLM_1.txt  PromptLLM_Retrotraduction.txt
Deduction/: Deduction.opam  dune-project
Deduction/lib/: assistant.ml  dune  interface.ml  preuve.ml
Deduction/test/: dune  example_goal.txt
LLMParser/: LLMParser.opam  dune-project
LLMParser/lib/: dune  interf.ml  lang.ml  lexer.mll  parser.mly
